--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.5",
     "@angular/platform-browser-dynamic": "^14.2.5",
     "@angular/router": "^14.2.5",
+    "js-base64": "^3.7.2",
     "keycloak-angular": "^12.1.0",
     "keycloak-js": "^19.0.3",
     "rxjs": "~7.5.0",
