--- a/.github/workflows/my-build.yml
+++ b/.github/workflows/my-build.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - name: Run ng build
+        - name: echo
           run: echo Hello Word
 
