--- a/.github/workflows/my-build.yml
+++ b/.github/workflows/my-build.yml
@@ -3,10 +3,19 @@ on:
     branches:
       - master
 jobs:
-  build:
+  docs:
+    name: '🌍 Deploy'
     runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v2
-        - name: echo
-          run: echo Hello Word
 
+    steps:
+      - name: '☁️ Checkout repository'
+        uses: actions/checkout@v3
+
+      - name: '⚙️ Use Node.js'
+        uses: actions/setup-node@v3
+        with:
+          check-latest: true
+          cache: 'npm'
+
+      - name: '⛓️ Install dependencies'
+        run: npm ci --no-optional --no-audit --prefer-offline --progress=false
