--- a/.github/workflows/my-build.yml
+++ b/.github/workflows/my-build.yml
@@ -19,3 +19,8 @@ jobs:
 
       - name: '⛓️ Install dependencies'
         run: npm ci --no-optional --no-audit --prefer-offline --progress=false
+      - name: '🛠️ Build'
+        run: npm run build
+
+      - name: '🛠️ check build'
+        run: ls
