--- a/.github/workflows/my-build.yml
+++ b/.github/workflows/my-build.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   docs:
     name: '🌍 Deploy'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: '☁️ Checkout repository'
@@ -20,7 +20,7 @@ jobs:
       - name: '⛓️ Install dependencies'
         run: npm ci --no-optional --no-audit --prefer-offline --progress=false
       - name: '🛠️ Build'
-        run: npm run build
+        run: ng serve
 
       - name: '🛠️ check build'
         run: ls
