--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,34 @@ services:
     image: 'myapp'
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfilenginx
     ports:
       - "80:80"
     depends_on:
       - "keycloak"
   keycloak:
     container_name: keycloak
-    image: quay.io/keycloak/keycloak:17.0.1
+    image: quay.io/keycloak/keycloak:19.0.3
     environment:
         KEYCLOAK_ADMIN: admin
         KEYCLOAK_ADMIN_PASSWORD: admin
+    volumes:
+      - .\keycloack_config:/config
     ports:
       - "8080:8080"
     command: start-dev
+
+
+  #kc_config:
+   # container_name: runImport
+   # image: adorsys/keycloak-config-cli:latest
+   # environment:
+   #   KEYCLOAK_URL: http://keycloak:8080/
+    #  KEYCLOAK_USER: admin
+    #  KEYCLOAK_PASSWORD: admin
+    #  KEYCLOAK_AVAILABILITYCHECK_ENABLED: true
+     # KEYCLOAK_AVAILABILITYCHECK_TIMEOUT: 120s
+   #   IMPORT_FILES: '/config/keycloak_config.json'
+   # volumes:
+    #  - .\keycloack_config:/config
 
