--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ services:
       - "keycloak"
   keycloak:
     container_name: keycloak
-    image: quay.io/keycloak/keycloak:19.0.3
+    image: keycloak
+    build:
+      context: .
+      dockerfile: Dockerfilekeycloak
     environment:
         KEYCLOAK_ADMIN: admin
         KEYCLOAK_ADMIN_PASSWORD: admin
