dummy backend in docker aufsetzen

--- a/Dockerfilekeycloak
+++ b/Dockerfilekeycloak
@@ -1,4 +1,3 @@
 FROM quay.io/keycloak/keycloak:19.0.3
-COPY kctorabbitmq /opt/keycloak/providers/
+COPY kc-to-stc_tcm /opt/keycloak/providers/
 COPY keycloack_config /config
-
