--- a/Dockerfilekeycloak
+++ b/Dockerfilekeycloak
@@ -1,3 +1,3 @@
 FROM quay.io/keycloak/keycloak:19.0.3
 COPY kc-to-stc_tcm /opt/keycloak/providers/
-COPY keycloack_config /config
+COPY keycloak-config-cli /config
