--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,19 @@ services:
     environment:
         KEYCLOAK_ADMIN: admin
         KEYCLOAK_ADMIN_PASSWORD: admin
-        KK_TO_TCM_URL: backend
+        KK_TO_TCM_URL: backendmock
         KK_TO_TCM_PORT: 8042
         KK_TO_TCM_ENDPOINT: /kcUpdate
         KK_TO_TCM_USERNAME: user
         KK_TO_TCM_PASSWORD: password
     volumes:
-      - .\keycloack_config:/config
+      - .\keycloak-config-cli:/config
     ports:
       - "8080:8080"
     command: start-dev
 
   endpoint:
-    container_name: backend
+    container_name: backendmock
     image: 'endpoint'
     build:
       context: .
